# r-efi

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  NEWS.md  README.md
.github/workflows/: ci.yml  publish.yml  rust-tests.yml
examples/: gop-query.rs  hello-world.rs  uefi-cross-compile.rs
src/: base.rs  gpt.rs  hii.rs  lib.rs  protocols.rs  signatures.rs  system.rs  x86_64-unknown-uefi.json
src/protocols/: absolute_pointer.rs  block_io.rs  bus_specific_driver_override.rs  debug_support.rs  debugport.rs  decompress.rs  device_path.rs  device_path_from_text.rs  device_path_to_text.rs  device_path_utilities.rs  disk_io.rs  disk_io2.rs  driver_binding.rs  driver_diagnostics2.rs  driver_family_override.rs  file.rs  graphics_output.rs  hii_database.rs  hii_font.rs  hii_font_ex.rs  hii_package_list.rs  hii_string.rs  ip4.rs  ip6.rs  load_file.rs  loaded_image.rs  loaded_image_device_path.rs  managed_network.rs  memory_attribute.rs  mod.rs  mp_services.rs  partition_info.rs  pci_io.rs  platform_driver_override.rs  rng.rs  service_binding.rs  shell.rs  shell_dynamic_command.rs  shell_parameters.rs  simple_file_system.rs  (+10 more)
