[package]
name = "r-efi"
version = "3.0.0"

authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
        "Tom Gundersen <teg@jklm.no>",
]
categories = [
        "embedded",
        "hardware-support",
        "no-std",
        "os",
]
description = "UEFI Reference Specification Protocol Constants and Definitions"
edition = "2018"
homepage = "https://github.com/r-efi/r-efi/wiki"
keywords = [
        "efi",
        "uefi",
        "boot",
        "firmware",
        "specification",
]
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/r-efi/r-efi"

[features]
# We feature-gate all examples, since they will not link correctly, unless you
# use a UEFI target configuration. To make `cargo test` work, we exclude all
# examples from normal runs.
examples = []

[[example]]
name = "hello-world"
required-features = ["examples"]

[[example]]
name = "uefi-cross-compile"
required-features = ["examples"]
