[package]
name = "r-efi"
version = "4.0.0"
authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
        "Tom Gundersen <teg@jklm.no>",
]
categories = [
        "embedded",
        "hardware-support",
        "no-std",
        "os",
]
description = "UEFI Reference Specification Protocol Constants and Definitions"
edition = "2018"
homepage = "https://github.com/r-efi/r-efi/wiki"
keywords = [
        "efi",
        "uefi",
        "boot",
        "firmware",
        "specification",
]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/r-efi/r-efi"

[dependencies]
# For more information on these dependencies see rust-lang/rust's
# `src/tools/rustc-std-workspace` folder
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }

[features]
# We feature-gate all examples, since they will not link correctly, unless you
# use a UEFI target configuration. To make `cargo test` work, we exclude all
# examples from normal runs.
examples = []
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std']

[[example]]
name = "gop-query"
required-features = ["examples"]

[[example]]
name = "hello-world"
required-features = ["examples"]

[[example]]
name = "uefi-cross-compile"
required-features = ["examples"]
